qt/gen_qmenu.h

class QAction;
class QIcon;
class QMenu;
class QMetaObject;
class QPoint;
class QRect;
class QSize;
class QWidget;
typedef struct QAction QAction;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMenu QMenu;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QMenu_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
bool QMenu_override_virtual_focusInEvent(void* self, intptr_t slot);
void QMenu_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QMenu_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QMenu_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QMenu_override_virtual_moveEvent(void* self, intptr_t slot);
void QMenu_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QMenu_override_virtual_resizeEvent(void* self, intptr_t slot);
void QMenu_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QMenu_override_virtual_closeEvent(void* self, intptr_t slot);
void QMenu_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QMenu_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QMenu_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QMenu_override_virtual_tabletEvent(void* self, intptr_t slot);
void QMenu_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QMenu_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QMenu_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QMenu_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QMenu_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QMenu_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QMenu_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QMenu_override_virtual_dropEvent(void* self, intptr_t slot);
void QMenu_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QMenu_override_virtual_showEvent(void* self, intptr_t slot);
void QMenu_virtualbase_showEvent(void* self, QShowEvent* event);
bool QMenu_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QMenu_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QMenu_override_virtual_metric(void* self, intptr_t slot);
int QMenu_virtualbase_metric(const void* self, int param1);
bool QMenu_override_virtual_initPainter(void* self, intptr_t slot);
void QMenu_virtualbase_initPainter(const void* self, QPainter* painter);
bool QMenu_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QMenu_virtualbase_redirected(const void* self, QPoint* offset);
bool QMenu_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QMenu_virtualbase_sharedPainter(const void* self);
bool QMenu_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QMenu_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QMenu_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QMenu_virtualbase_inputMethodQuery(const void* self, int param1);
bool QMenu_override_virtual_eventFilter(void* self, intptr_t slot);
bool QMenu_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QMenu_override_virtual_childEvent(void* self, intptr_t slot);
void QMenu_virtualbase_childEvent(void* self, QChildEvent* event);
bool QMenu_override_virtual_customEvent(void* self, intptr_t slot);
void QMenu_virtualbase_customEvent(void* self, QEvent* event);
bool QMenu_override_virtual_connectNotify(void* self, intptr_t slot);
void QMenu_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QMenu_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QMenu_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QMenu_delete(QMenu* self);