qt/gen_qmenu.nim

proc fcQMenu_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_keyReleaseEvent".}
proc fQMenu_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_focusInEvent".}
proc fcQMenu_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_focusInEvent".}
proc fQMenu_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_focusOutEvent".}
proc fcQMenu_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_focusOutEvent".}
proc fQMenu_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_moveEvent".}
proc fcQMenu_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_moveEvent".}
proc fQMenu_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_resizeEvent".}
proc fcQMenu_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_resizeEvent".}
proc fQMenu_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_closeEvent".}
proc fcQMenu_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_closeEvent".}
proc fQMenu_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_contextMenuEvent".}
proc fcQMenu_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_contextMenuEvent".}
proc fQMenu_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_tabletEvent".}
proc fcQMenu_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_tabletEvent".}
proc fQMenu_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_dragEnterEvent".}
proc fcQMenu_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_dragEnterEvent".}
proc fQMenu_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_dragMoveEvent".}
proc fcQMenu_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_dragMoveEvent".}
proc fQMenu_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_dragLeaveEvent".}
proc fcQMenu_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_dragLeaveEvent".}
proc fQMenu_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_dropEvent".}
proc fcQMenu_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_dropEvent".}
proc fQMenu_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_showEvent".}
proc fcQMenu_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_showEvent".}
proc fQMenu_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QMenu_virtualbase_nativeEvent".}
proc fcQMenu_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_nativeEvent".}
proc fQMenu_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QMenu_virtualbase_metric".}
proc fcQMenu_override_virtual_metric(self: pointer, slot: int) {.importc: "QMenu_override_virtual_metric".}
proc fQMenu_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QMenu_virtualbase_initPainter".}
proc fcQMenu_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QMenu_override_virtual_initPainter".}
proc fQMenu_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QMenu_virtualbase_redirected".}
proc fcQMenu_override_virtual_redirected(self: pointer, slot: int) {.importc: "QMenu_override_virtual_redirected".}
proc fQMenu_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QMenu_virtualbase_sharedPainter".}
proc fcQMenu_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QMenu_override_virtual_sharedPainter".}
proc fQMenu_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_inputMethodEvent".}
proc fcQMenu_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_inputMethodEvent".}
proc fQMenu_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QMenu_virtualbase_inputMethodQuery".}
proc fcQMenu_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QMenu_override_virtual_inputMethodQuery".}
proc fQMenu_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QMenu_virtualbase_eventFilter".}
proc fcQMenu_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMenu_override_virtual_eventFilter".}
proc fQMenu_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_childEvent".}
proc fcQMenu_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_childEvent".}
proc fQMenu_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_customEvent".}
proc fcQMenu_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_customEvent".}
proc fQMenu_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMenu_virtualbase_connectNotify".}
proc fcQMenu_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMenu_override_virtual_connectNotify".}
proc fQMenu_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMenu_virtualbase_disconnectNotify".}
proc fcQMenu_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMenu_override_virtual_disconnectNotify".}
proc fcQMenu_delete(self: pointer) {.importc: "QMenu_delete".}


func init*(T: type QMenu, h: ptr cQMenu): QMenu =
  T(h: h)
proc create*(T: type QMenu, parent: gen_qwidget.QWidget): QMenu =

  QMenu.init(fcQMenu_new(parent.h))
proc create*(T: type QMenu, ): QMenu =

  QMenu.init(fcQMenu_new2())
proc create*(T: type QMenu, title: string): QMenu =

  QMenu.init(fcQMenu_new3(struct_miqt_string(data: title, len: csize_t(len(title)))))
proc create*(T: type QMenu, title: string, parent: gen_qwidget.QWidget): QMenu =

  QMenu.init(fcQMenu_new4(struct_miqt_string(data: title, len: csize_t(len(title))), parent.h))
proc metaObject*(self: QMenu, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQMenu_metaObject(self.h))

proc metacast*(self: QMenu, param1: cstring): pointer =

  fcQMenu_metacast(self.h, param1)

proc metacall*(self: QMenu, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQMenu_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QMenu, s: cstring): string =

  let v_ms = fcQMenu_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QMenu, s: cstring): string =

  let v_ms = fcQMenu_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addAction*(self: QMenu, text: string): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_addAction(self.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc addAction2*(self: QMenu, icon: gen_qicon.QIcon, text: string): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_addAction2(self.h, icon.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc addMenu*(self: QMenu, menu: QMenu): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_addMenu(self.h, menu.h))

proc addMenuWithTitle*(self: QMenu, title: string): QMenu =

  QMenu(h: fcQMenu_addMenuWithTitle(self.h, struct_miqt_string(data: title, len: csize_t(len(title)))))

proc addMenu2*(self: QMenu, icon: gen_qicon.QIcon, title: string): QMenu =

  QMenu(h: fcQMenu_addMenu2(self.h, icon.h, struct_miqt_string(data: title, len: csize_t(len(title)))))

proc addSeparator*(self: QMenu, ): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_addSeparator(self.h))

proc addSection*(self: QMenu, text: string): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_addSection(self.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc addSection2*(self: QMenu, icon: gen_qicon.QIcon, text: string): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_addSection2(self.h, icon.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc insertMenu*(self: QMenu, before: gen_qaction.QAction, menu: QMenu): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_insertMenu(self.h, before.h, menu.h))

proc insertSeparator*(self: QMenu, before: gen_qaction.QAction): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_insertSeparator(self.h, before.h))

proc insertSection*(self: QMenu, before: gen_qaction.QAction, text: string): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_insertSection(self.h, before.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc insertSection2*(self: QMenu, before: gen_qaction.QAction, icon: gen_qicon.QIcon, text: string): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_insertSection2(self.h, before.h, icon.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc isEmpty*(self: QMenu, ): bool =

  fcQMenu_isEmpty(self.h)

proc clear*(self: QMenu, ): void =

  fcQMenu_clear(self.h)

proc setTearOffEnabled*(self: QMenu, tearOffEnabled: bool): void =

  fcQMenu_setTearOffEnabled(self.h, tearOffEnabled)

proc isTearOffEnabled*(self: QMenu, ): bool =

  fcQMenu_isTearOffEnabled(self.h)

proc isTearOffMenuVisible*(self: QMenu, ): bool =

  fcQMenu_isTearOffMenuVisible(self.h)

proc showTearOffMenu*(self: QMenu, ): void =

  fcQMenu_showTearOffMenu(self.h)

proc showTearOffMenuWithPos*(self: QMenu, pos: gen_qpoint.QPoint): void =

  fcQMenu_showTearOffMenuWithPos(self.h, pos.h)

proc hideTearOffMenu*(self: QMenu, ): void =

  fcQMenu_hideTearOffMenu(self.h)

proc setDefaultAction*(self: QMenu, defaultAction: gen_qaction.QAction): void =

  fcQMenu_setDefaultAction(self.h, defaultAction.h)

proc defaultAction*(self: QMenu, ): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_defaultAction(self.h))

proc setActiveAction*(self: QMenu, act: gen_qaction.QAction): void =

  fcQMenu_setActiveAction(self.h, act.h)

proc activeAction*(self: QMenu, ): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_activeAction(self.h))

proc popup*(self: QMenu, pos: gen_qpoint.QPoint): void =

  fcQMenu_popup(self.h, pos.h)

proc exec*(self: QMenu, ): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_exec(self.h))

proc execWithPos*(self: QMenu, pos: gen_qpoint.QPoint): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_execWithPos(self.h, pos.h))

proc exec2*(_: type QMenu, actions: seq[gen_qaction.QAction], pos: gen_qpoint.QPoint): gen_qaction.QAction =

  var actions_CArray = newSeq[pointer](len(actions))
  for i in 0..<len(actions):
    actions_CArray[i] = actions[i].h

  gen_qaction.QAction(h: fcQMenu_exec2(struct_miqt_array(len: csize_t(len(actions)), data: if len(actions) == 0: nil else: addr(actions_CArray[0])), pos.h))

proc sizeHint*(self: QMenu, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQMenu_sizeHint(self.h))

proc actionGeometry*(self: QMenu, param1: gen_qaction.QAction): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQMenu_actionGeometry(self.h, param1.h))

proc actionAt*(self: QMenu, param1: gen_qpoint.QPoint): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_actionAt(self.h, param1.h))

proc menuAction*(self: QMenu, ): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQMenu_menuAction(self.h))

proc title*(self: QMenu, ): string =
